[workspace.package]
version = "1.4.3"
edition = "2021"
rust-version = "1.86"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/n42blockchain/N42-rs"
repository = "https://github.com/n42blockchain/N42-rs"
exclude = [".github/"]

[workspace]
members = [
    "bin/n42/",
    "crates/n42/primitives/",
    "crates/n42/clique/",
    "crates/n42/engine-types/",
    "crates/n42/engine-primitives/",
    "crates/n42/n42-testing",
    #"crates/n42/mobile",
    #"crates/engine/invalid-block-hooks/",
    #"crates/evm/",
    "crates/chainspec/",
    #"crates/chain-state",
    "crates/node/builder/",
    #"crates/consensus/auto-seal/",
    "crates/consensus/consensus/",
    #"crates/consensus/debug-client/",
    #"crates/engine/util/",
    "crates/ethereum/cli/",
    #"crates/ethereum/payload/",
    #"crates/ethereum-forks/",
    "crates/ethereum/hardforks/",
    "crates/net/peers/",
    "crates/node/core/",
    "crates/ethereum/node/",
    #"crates/primitives/",
    "crates/primitives-traits/",
    #"crates/rpc/rpc-eth-api/",
    "crates/rpc/rpc-types-compat/",
    "crates/storage/db/",
    "crates/storage/db-api/",
    "crates/storage/provider",
    "crates/storage/storage-api/",
    #"testing/testing-utils/",
    "crates/n42/engine-primitives",
    "crates/n42/consensus-client",
#    "bin/reth/",
]
default-members = ["bin/n42"]
exclude = ["book/sources", "book/cli"]

# Explicitly set the resolver to version 2, which is the default for packages with edition >= 2021
# https://doc.rust-lang.org/edition-guide/rust-2021/default-cargo-resolver.html
resolver = "2"

[workspace.lints]
rust.missing_debug_implementations = "warn"
rust.missing_docs = "warn"
rust.rust_2018_idioms = { level = "deny", priority = -1 }
rust.unreachable_pub = "warn"
rust.unused_must_use = "deny"
rustdoc.all = "warn"
# rust.unnameable-types = "warn"

[workspace.lints.clippy]
# These are some of clippy's nursery (i.e., experimental) lints that we like.
# By default, nursery lints are allowed. Some of the lints below have made good
# suggestions which we fixed. The others didn't have any findings, so we can
# assume they don't have that many false positives. Let's enable them to
# prevent future problems.
borrow_as_ptr = "warn"
branches_sharing_code = "warn"
clear_with_drain = "warn"
cloned_instead_of_copied = "warn"
collection_is_never_read = "warn"
dbg_macro = "warn"
derive_partial_eq_without_eq = "warn"
doc_markdown = "warn"
empty_line_after_doc_comments = "warn"
empty_line_after_outer_attr = "warn"
enum_glob_use = "warn"
equatable_if_let = "warn"
explicit_into_iter_loop = "warn"
explicit_iter_loop = "warn"
flat_map_option = "warn"
from_iter_instead_of_collect = "warn"
if_not_else = "warn"
if_then_some_else_none = "warn"
implicit_clone = "warn"
imprecise_flops = "warn"
iter_on_empty_collections = "warn"
iter_on_single_items = "warn"
iter_with_drain = "warn"
iter_without_into_iter = "warn"
large_stack_frames = "warn"
manual_assert = "warn"
manual_clamp = "warn"
manual_is_variant_and = "warn"
manual_string_new = "warn"
match_same_arms = "warn"
missing-const-for-fn = "warn"
mutex_integer = "warn"
naive_bytecount = "warn"
needless_bitwise_bool = "warn"
needless_continue = "warn"
needless_for_each = "warn"
needless_pass_by_ref_mut = "warn"
nonstandard_macro_braces = "warn"
option_as_ref_cloned = "warn"
or_fun_call = "warn"
path_buf_push_overwrite = "warn"
read_zero_byte_vec = "warn"
result_large_err = "allow"
redundant_clone = "warn"
redundant_else = "warn"
single_char_pattern = "warn"
string_lit_as_bytes = "warn"
string_lit_chars_any = "warn"
suboptimal_flops = "warn"
suspicious_operation_groupings = "warn"
trailing_empty_array = "warn"
trait_duplication_in_bounds = "warn"
transmute_undefined_repr = "warn"
trivial_regex = "warn"
tuple_array_conversions = "warn"
type_repetition_in_bounds = "warn"
uninhabited_references = "warn"
unnecessary_self_imports = "warn"
unnecessary_struct_initialization = "warn"
unnested_or_patterns = "warn"
unused_peekable = "warn"
unused_rounding = "warn"
use_self = "warn"
useless_let_if_seq = "warn"
while_float = "warn"
zero_sized_map_values = "warn"

# These are nursery lints which have findings. Allow them for now. Some are not
# quite mature enough for use in our codebase and some we don't really want.
# Explicitly listing should make it easier to fix in the future.
as_ptr_cast_mut = "allow"
cognitive_complexity = "allow"
debug_assert_with_mut_call = "allow"
fallible_impl_from = "allow"
future_not_send = "allow"
needless_collect = "allow"
non_send_fields_in_send_ty = "allow"
redundant_pub_crate = "allow"
significant_drop_in_scrutinee = "allow"
significant_drop_tightening = "allow"
too_long_first_doc_paragraph = "allow"

# Speed up compilation time for dev builds by reducing emitted debug info.
# NOTE: Debuggers may provide less useful information with this setting.
# Uncomment this section if you're using a debugger.
[profile.dev]
# https://davidlattimore.github.io/posts/2024/02/04/speeding-up-the-rust-edit-build-run-cycle.html
debug = "line-tables-only"
split-debuginfo = "unpacked"

# Speed up tests.
[profile.dev.package]
proptest.opt-level = 3
rand_chacha.opt-level = 3
rand_xorshift.opt-level = 3
unarray.opt-level = 3

# Meant for testing - all optimizations, but with debug assertions and overflow checks.
[profile.hivetests]
inherits = "test"
opt-level = 3
lto = "thin"

[profile.release]
opt-level = 3
lto = "thin"
debug = "none"
strip = "symbols"
panic = "unwind"
codegen-units = 16

# Use the `--profile profiling` flag to show symbols in release mode.
# e.g. `cargo build --profile profiling`
[profile.profiling]
inherits = "release"
debug = "full"
strip = "none"

# Include debug info in benchmarks too.
[profile.bench]
inherits = "profiling"

[profile.maxperf]
inherits = "release"
lto = "fat"
codegen-units = 1

[workspace.dependencies]
# for n42
n42-primitives = { path = "crates/n42/primitives" }
n42-clique = {path="crates/n42/clique"}
n42-engine-types = {path="crates/n42/engine-types"}
n42-engine-primitives = {path="crates/n42/engine-primitives"}
consensus-client = {path="crates/n42/consensus-client"}

blst = "0.3.11"

reth = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.4.3" }
reth-auto-seal-consensus = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.4.3" }
reth-basic-payload-builder = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.4.3" }
#reth-beacon-consensus = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.4.3" }
reth-bench = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.4.3" }
reth-blockchain-tree = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.4.3" }
reth-blockchain-tree-api = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.4.3" }
reth-chain-state = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.4.3" }
reth-chainspec = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.4.3" }
reth-cli = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.4.3" }
reth-cli-commands = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.4.3" }
reth-cli-runner = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.4.3" }
reth-cli-util = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.4.3" }
reth-codecs = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.4.3" }
reth-codecs-derive = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.4.3" }
reth-config = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.4.3" }
reth-consensus = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.4.3", default-features = false }
reth-consensus-common = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.4.3" }
reth-consensus-debug-client = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.4.3" }
reth-db = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.4.3", default-features = false }
reth-db-api = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.4.3" }
reth-db-common = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.4.3" }
reth-db-models = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.4.3" }
reth-discv4 = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.4.3" }
reth-discv5 = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.4.3" }
reth-dns-discovery = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.4.3" }
reth-downloaders = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.4.3" }
reth-e2e-test-utils = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.4.3" }
reth-ecies = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.4.3" }
reth-engine-local = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.4.3" }
reth-engine-primitives = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.4.3" }
reth-engine-tree = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.4.3" }
reth-engine-service = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.4.3" }
reth-engine-util = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.4.3" }
reth-errors = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.4.3" }
reth-eth-wire = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.4.3" }
reth-eth-wire-types = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.4.3" }
reth-ethereum-cli = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.4.3" }
reth-ethereum-consensus = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.4.3" }
reth-ethereum-engine-primitives = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.4.3" }
reth-ethereum-forks = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.4.3" }
reth-ethereum-payload-builder = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.4.3" }
reth-etl = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.4.3" }
reth-evm = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.4.3" }
reth-evm-ethereum = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.4.3" }
reth-optimism-evm = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.4.3" }
reth-execution-errors = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.4.3" }
reth-execution-types = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.4.3" }
reth-exex = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.4.3" }
reth-exex-test-utils = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.4.3" }
reth-exex-types = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.4.3" }
reth-fs-util = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.4.3" }
reth-invalid-block-hooks = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.4.3" }
reth-ipc = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.4.3" }
reth-libmdbx = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.4.3" }
reth-mdbx-sys = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.4.3" }
reth-metrics = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.4.3" }
reth-net-banlist = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.4.3" }
reth-net-nat = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.4.3" }
reth-network = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.4.3" }
reth-network-api = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.4.3" }
reth-network-p2p = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.4.3" }
reth-network-peers = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.4.3", default-features = false }
reth-network-types = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.4.3" }
reth-nippy-jar = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.4.3" }
reth-node-api = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.4.3" }
reth-node-builder = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.4.3" }
reth-node-core = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.4.3" }
reth-node-ethereum = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.4.3" }
reth-node-events = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.4.3" }
reth-node-metrics = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.4.3" }
reth-optimism-node = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.4.3" }
reth-node-types = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.4.3" }
reth-optimism-chainspec = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.4.3" }
reth-optimism-cli = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.4.3" }
reth-optimism-consensus = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.4.3" }
reth-optimism-forks = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.4.3" }
reth-optimism-payload-builder = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.4.3" }
reth-optimism-primitives = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.4.3" }
reth-optimism-rpc = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.4.3" }
reth-optimism-storage = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.4.3" }
reth-payload-builder = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.4.3" }
reth-payload-primitives = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.4.3" }
reth-payload-builder-primitives = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.4.3" }
reth-payload-validator = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.4.3" }
reth-primitives = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.4.3", default-features = false, features = ["std"] }
reth-primitives-traits = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.4.3", default-features = false }
reth-provider = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.4.3" }
reth-prune = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.4.3" }
reth-prune-types = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.4.3" }
reth-revm = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.4.3", default-features = false }
reth-rpc = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.4.3" }
reth-rpc-api = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.4.3" }
reth-rpc-api-testing-util = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.4.3" }
reth-rpc-builder = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.4.3" }
reth-rpc-engine-api = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.4.3" }
reth-rpc-eth-api = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.4.3" }
reth-rpc-eth-types = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.4.3", default-features = false }
reth-rpc-layer = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.4.3" }
reth-rpc-server-types = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.4.3" }
reth-rpc-types-compat = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.4.3" }
reth-stages = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.4.3" }
reth-stages-api = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.4.3" }
reth-stages-types = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.4.3" }
reth-static-file = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.4.3" }
reth-static-file-types = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.4.3" }
reth-storage-api = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.4.3" }
reth-storage-errors = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.4.3" }
reth-tasks = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.4.3" }
reth-testing-utils = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.4.3" }
reth-tokio-util = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.4.3" }
reth-tracing = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.4.3" }
reth-transaction-pool = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.4.3" }
reth-trie = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.4.3" }
reth-trie-common = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.4.3" }
reth-trie-db = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.4.3" }
reth-trie-parallel = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.4.3" }

reth-ethereum-primitives = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.4.3" }
reth-ress-protocol = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.4.3" }
reth-ress-provider = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.4.3" }

# revm
revm = { version = "23.1.0", default-features = false }
revm-bytecode = { version = "4.0.0", default-features = false }
revm-database = { version = "4.0.0", default-features = false }
revm-state = { version = "4.0.0", default-features = false }
revm-primitives = { version = "19.0.0", default-features = false }
revm-interpreter = { version = "19.0.0", default-features = false }
revm-inspector = { version = "4.0.0", default-features = false }
revm-context = { version = "4.0.0", default-features = false }
revm-context-interface = { version = "4.0.0", default-features = false }
revm-database-interface = { version = "4.0.0", default-features = false }
op-revm = { version = "4.0.2", default-features = false }
revm-inspectors = "0.22.3"

# eth
alloy-chains = { version = "0.2.0", default-features = false }
alloy-dyn-abi = "1.1.0"
alloy-eip2124 = { version = "0.2.0", default-features = false }
alloy-evm = { version = "0.8.1", default-features = false }
alloy-primitives = { version = "1.1.0", default-features = false, features = ["map-foldhash"] }
alloy-rlp = { version = "0.3.10", default-features = false, features = ["core-net", "derive"] }
alloy-sol-macro = "1.1.0"
alloy-sol-types = { version = "1.1.0", default-features = false }
alloy-trie = { version = "0.8.1", default-features = false }

alloy-hardforks = "0.2.0"

alloy-consensus = { version = "1.0.5", default-features = false }
alloy-contract = { version = "1.0.5", default-features = false }
alloy-eips = { version = "1.0.5", default-features = false }
alloy-genesis = { version = "1.0.5", default-features = false }
alloy-json-rpc = { version = "1.0.5", default-features = false }
alloy-network = { version = "1.0.5", default-features = false }
alloy-network-primitives = { version = "1.0.5", default-features = false }
alloy-provider = { version = "1.0.5", features = ["reqwest"], default-features = false }
alloy-pubsub = { version = "1.0.5", default-features = false }
alloy-rpc-client = { version = "1.0.5", default-features = false }
alloy-rpc-types = { version = "1.0.5", features = ["eth"], default-features = false }
alloy-rpc-types-admin = { version = "1.0.5", default-features = false }
alloy-rpc-types-anvil = { version = "1.0.5", default-features = false }
alloy-rpc-types-beacon = { version = "1.0.5", default-features = false }
alloy-rpc-types-debug = { version = "1.0.5", default-features = false }
alloy-rpc-types-engine = { version = "1.0.5", default-features = false }
alloy-rpc-types-eth = { version = "1.0.5", default-features = false }
alloy-rpc-types-mev = { version = "1.0.5", default-features = false }
alloy-rpc-types-trace = { version = "1.0.5", default-features = false }
alloy-rpc-types-txpool = { version = "1.0.5", default-features = false }
alloy-serde = { version = "1.0.5", default-features = false }
alloy-signer = { version = "1.0.5", default-features = false }
alloy-signer-local = { version = "1.0.5", default-features = false }
alloy-transport = { version = "1.0.5" }
alloy-transport-http = { version = "1.0.5", features = ["reqwest-rustls-tls"], default-features = false }
alloy-transport-ipc = { version = "1.0.5", default-features = false }
alloy-transport-ws = { version = "1.0.5", default-features = false }

# op
alloy-op-evm = { version = "0.8.1", default-features = false }
alloy-op-hardforks = "0.2.0"
op-alloy-rpc-types = { version = "0.16.0", default-features = false }
op-alloy-rpc-types-engine = { version = "0.16.0", default-features = false }
op-alloy-network = { version = "0.16.0", default-features = false }
op-alloy-consensus = { version = "0.16.0", default-features = false }
op-alloy-rpc-jsonrpsee = { version = "0.16.0", default-features = false }
op-alloy-flz = { version = "0.13.0", default-features = false }

# misc
integer-sqrt = "0.1.5"
aquamarine = "0.6"
auto_impl = "1"
backon = { version = "1.2", default-features = false, features = ["std-blocking-sleep", "tokio-sleep"] }
bincode = "1.3"
bitflags = "2.4"
blake3 = "1.5.5"
boyer-moore-magiclen = "0.2.16"
bytes = { version = "1.5", default-features = false }
cfg-if = "1.0"
clap = "4"
dashmap = "6.0"
derive_more = { version = "2", default-features = false, features = ["full"] }
dirs-next = "2.0.0"
dyn-clone = "1.0.17"
eyre = "0.6"
fdlimit = "0.3.0"
generic-array = "0.14"
humantime = "2.1"
humantime-serde = "1.1"
itertools = { version = "0.14", default-features = false }
linked_hash_set = "0.1"
lz4 = "1.28.1"
modular-bitfield = "0.11.2"
notify = { version = "8.0.0", default-features = false, features = ["macos_fsevent"] }
nybbles = { version = "0.3.0", default-features = false }
once_cell = { version = "1.19", default-features = false, features = ["critical-section"] }
parking_lot = "0.12"
paste = "1.0"
rand = "0.9"
rayon = "1.7"
rustc-hash = { version = "2.0", default-features = false }
schnellru = "0.2"
serde = { version = "1.0", default-features = false }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
serde_with = { version = "3", default-features = false, features = ["macros"] }
sha2 = { version = "0.10", default-features = false }
shellexpand = "3.0.0"
smallvec = "1"
strum = { version = "0.27", default-features = false }
strum_macros = "0.27"
syn = "2.0"
thiserror = { version = "2.0.0", default-features = false }
tar = "0.4.44"
tracing = { version = "0.1.0", default-features = false }
tracing-appender = "0.2"
url = { version = "2.3", default-features = false }
zstd = "0.13"
byteorder = "1"
mini-moka = "0.10"
tar-no-std = { version = "0.3.2", default-features = false }
miniz_oxide = { version = "0.8.4", default-features = false }

# metrics
metrics = "0.24.0"
metrics-derive = "0.1"
metrics-exporter-prometheus = { version = "0.16.0", default-features = false }
metrics-process = "2.1.0"
metrics-util = { default-features = false, version = "0.19.0" }

# proc-macros
proc-macro2 = "1.0"
quote = "1.0"

# tokio
tokio = { version = "1.44.2", default-features = false }
tokio-stream = "0.1.11"
tokio-util = { version = "0.7.4", features = ["codec"] }

# async
async-stream = "0.3"
async-trait = "0.1.68"
futures = "0.3"
futures-core = "0.3"
futures-util = { version = "0.3", default-features = false }
hyper = "1.3"
hyper-util = "0.1.5"
pin-project = "1.0.12"
reqwest = { version = "0.12", default-features = false }
tracing-futures = "0.2"
tower = "0.5"
tower-http = "0.6"

# p2p
discv5 = "0.9"
if-addrs = "0.13"

# rpc
jsonrpsee = "0.25.1"
jsonrpsee-core = "0.25.1"
jsonrpsee-server = "0.25.1"
jsonrpsee-http-client = "0.25.1"
jsonrpsee-types = "0.25.1"

# http
http = "1.0"
http-body = "1.0"
http-body-util = "0.1.2"
jsonwebtoken = "9"
proptest-arbitrary-interop = "0.1.0"

# crypto
enr = { version = "0.13", default-features = false }
k256 = { version = "0.13", default-features = false, features = ["ecdsa"] }
secp256k1 = { version = "0.30", default-features = false, features = ["global-context", "recovery"] }
# rand 8 for secp256k1
rand_08 = { package = "rand", version = "0.8" }

# for eip-4844
c-kzg = "2.1.1"

# config
toml = "0.8"

# misc-testing
arbitrary = "1.3"
assert_matches = "1.5.0"
criterion = { package = "codspeed-criterion-compat", version = "2.7" }
proptest = "1.4"
proptest-derive = "0.5"
similar-asserts = { version = "1.5.0", features = ["serde"] }
tempfile = "3.20"
test-fuzz = "7"
rstest = "0.24.0"
test-case = "3"

# ssz encoding
ethereum_ssz = "0.9.0"
ethereum_ssz_derive = "0.9.0"

# allocators
tikv-jemalloc-ctl = "0.6"
tikv-jemallocator = "0.6"
tracy-client = "0.18.0"
snmalloc-rs = { version = "0.3.7", features = ["build_cc"] }

# TODO: When we build for a windows target on an ubuntu runner, crunchy tries to
# get the wrong path, update this when the workflow has been updated
#
# See: https://github.com/eira-fransham/crunchy/issues/13
crunchy = "=0.2.2"
aes = "0.8.1"
ahash = "0.8"
anyhow = "1.0"
bindgen = { version = "0.70", default-features = false }
block-padding = "0.3.2"
cc = "=1.2.15"
cipher = "0.4.3"
comfy-table = "7.0"
concat-kdf = "0.1.0"
convert_case = "0.7.0"
crossbeam-channel = "0.5.13"
crossterm = "0.28.0"
csv = "1.3.0"
ctr = "0.9.2"
data-encoding = "2"
delegate = "0.13"
digest = "0.10.5"
hash-db = "=0.15.2"
hickory-resolver = "0.25.0"
hmac = "0.12.1"
human_bytes = "0.4.1"
indexmap = "2"
interprocess = "2.2.0"
lz4_flex = { version = "0.11", default-features = false }
memmap2 = "0.9.4"
mev-share-sse = { version = "0.5.0", default-features = false }
num-traits = "0.2.15"
page_size = "0.6.0"
parity-scale-codec = "3.2.1"
plain_hasher = "0.2"
pretty_assertions = "1.4"
ratatui = { version = "0.29", default-features = false }
ringbuffer = "0.15.0"
rmp-serde = "1.3"
roaring = "0.10.2"
rolling-file = "0.2.0"
sha3 = "0.10.5"
snap = "1.1.1"
socket2 = { version = "0.5", default-features = false }
sysinfo = { version = "0.33", default-features = false }
tracing-journald = "0.3"
tracing-logfmt = "0.3.3"
tracing-subscriber = { version = "0.3", default-features = false }
triehash = "0.8"
typenum = "1.15.0"
vergen = "9.0.4"
visibility = "0.1.1"
walkdir = "2.3.3"
vergen-git2 = "1.0.5"

nix = { version = "0.29.0", features = ["signal"] }
tree_hash = "0.10.0"
tree_hash_derive = "0.10.0"

[patch.'https://github.com/paradigmxyz/reth.git']
reth = { path = "bin/reth" }
reth-evm-ethereum = { path = "crates/ethereum/evm" }
reth-chainspec = { path = "crates/chainspec" }
reth-node-builder = { path = "crates/node/builder" }
#reth-primitives = { path = "crates/primitives" }
reth-primitives-traits = { path = "crates/primitives-traits" }
reth-node-core = { path = "crates/node/core" }
reth-node-ethereum = { path = "crates/ethereum/node" }
reth-provider = { path = "crates/storage/provider" }
reth-db = {path = "crates/storage/db", optional = true }
reth-ethereum-forks = { path = "crates/ethereum/hardforks"}
reth-ethereum-cli = { path = "crates/ethereum/cli"}
#reth-ethereum-consensus = { path = "crates/ethereum/consensus"}
#reth-evm = { path = "crates/evm"}
#reth-invalid-block-hooks = { path = "crates/engine/invalid-block-hooks" }
reth-db-api={path = "crates/storage/db-api"}
reth-storage-api={path="crates/storage/storage-api"}
reth-rpc-types-compat={path="crates/rpc/rpc-types-compat"}
#reth-ethereum-payload-builder={path="crates/ethereum/payload"}
#reth-auto-seal-consensus={path="crates/consensus/auto-seal"}
reth-consensus = { path="crates/consensus/consensus"}
#reth-consensus-debug-client = { path="crates/consensus/debug-client"}
#reth-engine-util={path="crates/engine/util"}
#reth-rpc-eth-api={path="crates/rpc/rpc-eth-api"}
#reth-exex={path="crates/exex/exex"}
reth-network = { path = "crates/net/network" }
reth-network-api = { path = "crates/net/network-api" }
reth-network-peers = { path = "crates/net/peers"}
#reth-testing-utils={path="testing/testing-utils"}
#reth-chain-state = { path = "crates/chain-state"}

[patch.crates-io]
#alloy-genesis = { path = "./crates/n42/alloy-genesis" }
alloy-rpc-types-engine = { path = "./crates/n42/alloy-rpc-types-engine" }
alloy-rpc-types-beacon = { path = "./crates/n42/alloy-rpc-types-beacon" }

# alloy-consensus = { git = "https://github.com/alloy-rs/alloy", branch = "main" }
# alloy-contract = { git = "https://github.com/alloy-rs/alloy", branch = "main" }
# alloy-eips = { git = "https://github.com/alloy-rs/alloy", branch = "main" }
# alloy-genesis = { git = "https://github.com/alloy-rs/alloy", branch = "main" }
# alloy-json-rpc = { git = "https://github.com/alloy-rs/alloy", branch = "main" }
# alloy-network = { git = "https://github.com/alloy-rs/alloy", branch = "main" }
# alloy-network-primitives = { git = "https://github.com/alloy-rs/alloy", branch = "main" }
# alloy-provider = { git = "https://github.com/alloy-rs/alloy", branch = "main" }
# alloy-pubsub = { git = "https://github.com/alloy-rs/alloy", branch = "main" }
# alloy-rpc-client = { git = "https://github.com/alloy-rs/alloy", branch = "main" }
# alloy-rpc-types = { git = "https://github.com/alloy-rs/alloy", branch = "main" }
# alloy-rpc-types-admin = { git = "https://github.com/alloy-rs/alloy", branch = "main" }
# alloy-rpc-types-anvil = { git = "https://github.com/alloy-rs/alloy", branch = "main" }
# alloy-rpc-types-beacon = { git = "https://github.com/alloy-rs/alloy", branch = "main" }
# alloy-rpc-types-debug = { git = "https://github.com/alloy-rs/alloy", branch = "main" }
# alloy-rpc-types-engine = { git = "https://github.com/alloy-rs/alloy", branch = "main" }
# alloy-rpc-types-eth = { git = "https://github.com/alloy-rs/alloy", branch = "main" }
# alloy-rpc-types-mev = { git = "https://github.com/alloy-rs/alloy", branch = "main" }
# alloy-rpc-types-trace = { git = "https://github.com/alloy-rs/alloy", branch = "main" }
# alloy-rpc-types-txpool = { git = "https://github.com/alloy-rs/alloy", branch = "main" }
# alloy-serde = { git = "https://github.com/alloy-rs/alloy", branch = "main" }
# alloy-signer = { git = "https://github.com/alloy-rs/alloy", branch = "main" }
# alloy-signer-local = { git = "https://github.com/alloy-rs/alloy", branch = "main" }
# alloy-transport = { git = "https://github.com/alloy-rs/alloy", branch = "main" }
# alloy-transport-http = { git = "https://github.com/alloy-rs/alloy", branch = "main" }
# alloy-transport-ipc = { git = "https://github.com/alloy-rs/alloy", branch = "main" }
# alloy-transport-ws = { git = "https://github.com/alloy-rs/alloy", branch = "main" }
#
# op-alloy-consensus = { git = "https://github.com/alloy-rs/op-alloy", rev = "ad607c1" }
# op-alloy-network = { git = "https://github.com/alloy-rs/op-alloy", rev = "ad607c1" }
# op-alloy-rpc-types = { git = "https://github.com/alloy-rs/op-alloy", rev = "ad607c1" }
# op-alloy-rpc-types-engine = { git = "https://github.com/alloy-rs/op-alloy", rev = "ad607c1" }
#
# revm-inspectors = { git = "https://github.com/paradigmxyz/revm-inspectors", rev = "1207e33" }
#
# jsonrpsee = { git = "https://github.com/paradigmxyz/jsonrpsee", branch = "matt/make-rpc-service-pub" }
# jsonrpsee-core = { git = "https://github.com/paradigmxyz/jsonrpsee", branch = "matt/make-rpc-service-pub" }
# jsonrpsee-server = { git = "https://github.com/paradigmxyz/jsonrpsee", branch = "matt/make-rpc-service-pub" }
# jsonrpsee-http-client = { git = "https://github.com/paradigmxyz/jsonrpsee", branch = "matt/make-rpc-service-pub" }
# jsonrpsee-types = { git = "https://github.com/paradigmxyz/jsonrpsee", branch = "matt/make-rpc-service-pub" }
