[package]
name = "rast-primitives"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
exclude.workspace = true

[dependencies]
#reth
reth-primitives = { workspace = true, default-features = false, features = ["std"] }
reth-primitives-traits.workspace = true
alloy-rlp.workspace = true
alloy-primitives.workspace = true

# arbitrary utils
# arbitrary = { workspace = true, features = ["derive"], optional = true }
arbitrary.workspace=true
# serde
serde.workspace = true
# log
tracing.workspace = true
#
schnellru.workspace = true

bytes.workspace=true

hashbrown.workspace=true
rlp.workspace=true
secp256k1.workspace=true
[lints]
workspace = true
