[package]
name = "consensus-client"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
exclude.workspace = true

[dependencies]
# reth
#reth-beacon-consensus.workspace = true
reth-chainspec.workspace = true
reth-consensus.workspace = true
reth-engine-primitives.workspace = true
reth-engine-service.workspace = true
reth-engine-tree.workspace = true
reth-evm.workspace = true
reth-ethereum-engine-primitives.workspace = true
reth-payload-builder.workspace = true
reth-payload-primitives.workspace = true
reth-primitives.workspace = true
reth-payload-validator.workspace = true
reth-provider.workspace = true
reth-prune.workspace = true
reth-rpc-types-compat.workspace = true
reth-transaction-pool.workspace = true
reth-stages-api.workspace = true
reth-network.workspace = true
reth-eth-wire-types.workspace = true
reth-network-api.workspace = true
reth-tokio-util.workspace = true
reth-node-types.workspace = true
reth-node-api.workspace = true
reth-network-p2p.workspace = true
reth-primitives-traits.workspace = true

# alloy
alloy-primitives.workspace = true
alloy-rpc-types-engine.workspace = true
alloy-eips.workspace = true
alloy-consensus.workspace = true

# async
tokio.workspace = true
tokio-stream.workspace = true
futures-util.workspace = true

# misc
nix.workspace = true
eyre.workspace = true
tracing.workspace = true
schnellru.workspace = true
itertools.workspace = true

op-alloy-rpc-types-engine = { workspace = true, optional = true }

[lints]
workspace = true
