[package]
name = "deposit_sdk"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
exclude.workspace = true

[dependencies]
ethers = { version = "2.0", features = [
    "abigen",
    "rustls",
    "ws",
] }
ethers-signers = "2.0"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"
eyre = "0.6" # 用于更好的错误处理
thiserror = "1.0"
url = "2.5.4"
#n42-withdrawals = { workspace = true, default-features = false, features = ["supranational"] }
keystore = { path = "../keystore" }
hex-literal = "0.4"


[lints]
workspace = true
