[package]
name = "deposit_sdk"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
exclude.workspace = true

[dependencies]
ethers = { version = "2.0", features = [
    "abigen",
    "rustls",
    "ws",
] }
ethers-signers = "2.0"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"
thiserror = "1.0"
url = "2.5.4"
n42-withdrawals = { workspace = true }
keystore = { path = "../keystore" }
hex-literal = "0.4"
tree_hash = "0.8"
tree_hash_derive = "0.9"
ethereum_serde_utils = "0.7"
clap = { version = "4.5.23", features = ["derive"] }


[lints]
workspace = true
