[package]
name = "n42-engine-primitives"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
exclude.workspace = true

[dependencies]

reth-ethereum-engine-primitives.workspace = true
#reth-engine-primitives.workspace = true
reth-primitives.workspace = true
reth-node-api.workspace = true
reth-chainspec.workspace = true
reth-payload-primitives.workspace = true

# alloy
alloy-primitives.workspace = true
alloy-rpc-types-engine.workspace = true
alloy-rpc-types = { workspace = true, features = ["engine"] }

#misc
eyre.workspace = true
thiserror.workspace = true
serde.workspace = true

[lints]
workspace = true
