[package]
name = "n42-engine-types"
version = "0.0.0"
publish = false
edition.workspace = true
license.workspace = true

[dependencies]
#bls={path="/Users/root1/Desktop/starlink/lighthouse/crypto/bls"}
jsonrpsee.workspace = true
lazy_static.workspace = true
serde_json.workspace = true
#n42
n42-engine-primitives.workspace = true
n42-clique.workspace = true
#reth
reth-evm.workspace = true
reth-evm-ethereum.workspace = true
reth-errors.workspace = true
reth-trie.workspace = true
reth-execution-types.workspace = true
reth-chain-state.workspace = true
reth-chainspec.workspace = true
reth-node-api.workspace = true
reth-node-core.workspace = true
reth-node-builder.workspace = true
reth-network.workspace = true
reth-rpc.workspace = true
reth-rpc-server-types.workspace = true
reth-ethereum-engine-primitives.workspace = true
reth-rpc-api.workspace = true
reth-rpc-builder.workspace = true
reth-rpc-eth-types.workspace = true
reth-transaction-pool.workspace = true
reth-consensus.workspace = true
#reth-auto-seal-consensus.workspace = true
reth-revm.workspace = true
reth-tasks.workspace = true
reth-primitives.workspace = true
reth-primitives-traits.workspace = true
reth-storage-api.workspace = true
reth-ethereum-primitives.workspace = true
reth-payload-builder.workspace = true
reth-payload-builder-primitives.workspace = true
reth-payload-primitives.workspace = true
reth-basic-payload-builder.workspace = true
reth-ethereum-payload-builder.workspace = true
reth-node-ethereum = { workspace = true, features = ["test-utils"] }
reth-tracing.workspace = true
reth-trie-db.workspace = true
alloy-genesis.workspace = true
alloy-rpc-types-eth.workspace = true
alloy-rpc-types = { workspace = true, features = ["engine"] }
reth-provider.workspace = true


eyre.workspace = true
tokio.workspace = true
thiserror.workspace = true
serde.workspace = true
futures = "0.3"
futures-util = "0.3.31"
tracing = "0.1.41"

# ethereum
alloy-rlp.workspace = true
alloy-primitives.workspace = true
alloy-consensus.workspace = true
alloy-eips.workspace = true
revm.workspace = true

# metrics
reth-metrics.workspace = true
metrics.workspace = true
async-trait.workspace = true


