[package]
name = "mobile"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
exclude.workspace = true

[dependencies]
n42-engine-types.workspace=true
jsonrpsee.workspace=true
reth-revm.workspace=true
lazy_static.workspace=true
reth-provider.workspace=true
reth-chainspec.workspace=true
reth-evm.workspace=true
reth-evm-ethereum.workspace=true
alloy-consensus.workspace=true
revm-primitives.workspace=true
reth-primitives.workspace=true
alloy-eips.workspace=true
reth-consensus.workspace=true
reth-ethereum-consensus.workspace=true
alloy-primitives.workspace=true
tokio.workspace=true
reth-primitives-traits.workspace=true
reth-ethereum-primitives.workspace=true

[lints]
workspace = true
